--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -22,8 +22,8 @@ h4 {
     cursor: default;
     /* font-family: harmony; */
     line-height: 1;
-    content-visibility: auto;
-    -webkit-content-visibility: auto;
+    /* content-visibility: auto; */
+    /* -webkit-content-visibility: auto; */
 }
 
 *::selection {
